@@ -1,4 +1,7 @@
 chess
 =====
 
-Chess
+Set VM options to:
+--add-opens=java.base/java.lang=ALL-UNNAMED
+
+Then run in Intellij
